# tdd-project

./: .env  Makefile  docker-compose.yml  pyproject.toml
store1/: main.py
store1/core/: config.py
store1/schemas/: base.py  product.py
tests/: factories.py
tests/schemas/: test_product.py
